@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-05T16:11:49Z",
-  "count_outdated" : 1767,
-  "uniques_outdated" : 116,
-  "count" : 1784,
-  "uniques" : 125,
+  "timestamp" : "2022-08-06T00:41:12Z",
+  "count_outdated" : 1792,
+  "uniques_outdated" : 118,
+  "count" : 1804,
+  "uniques" : 126,
   "views" : [
-    {
-      "timestamp": "2022-07-22T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 25 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-23T00:00:00Z",
       "count": 2,
