@@ -1,12 +1,7 @@
 {
-  "count": 17,
+  "count": 12,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-07-22T00:00:00Z",
-      "count": 5,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-23T00:00:00Z",
       "count": 2,
